--- a/packages/nodes-base/package.json
+++ b/packages/nodes-base/package.json
@@ -229,6 +229,7 @@
       "dist/credentials/MediumApi.credentials.js",
       "dist/credentials/MediumOAuth2Api.credentials.js",
       "dist/credentials/MetabaseApi.credentials.js",
+      "dist/credentials/MercadoPagoApi.credentials.js",
       "dist/credentials/MessageBirdApi.credentials.js",
       "dist/credentials/MetabaseApi.credentials.js",
       "dist/credentials/MicrosoftAzureCosmosDbSharedKeyApi.credentials.js",
@@ -647,6 +648,7 @@
       "dist/nodes/Mautic/MauticTrigger.node.js",
       "dist/nodes/Medium/Medium.node.js",
       "dist/nodes/Merge/Merge.node.js",
+      "dist/nodes/MercadoPago/MercadoPago.node.js",
       "dist/nodes/MessageBird/MessageBird.node.js",
       "dist/nodes/Metabase/Metabase.node.js",
       "dist/nodes/Microsoft/AzureCosmosDb/AzureCosmosDb.node.js",
